[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am viji,and this is my new webapp3.
+            Hi! I am viji,and this is my new first webapp .
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
